[tool.poetry]
name = "repl-nix-heartyvigilantdigits"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_heartyvigilantdigits"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
werkzeug = "^3.0.1"
websockets = "^12.0"
flask-socketio = "^5.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
